# aOa

./: .embedding-analysis.json  .gitignore  .golangci.yml  .goreleaser.yml  .hadolint.yaml  .shellcheckrc  .yamllint.yaml  AOA_COMPARISON.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GO-BOARD.md  GRAMMAR_REPORT.md  HIT_TRACKING_MANIFEST.txt  KEYWORD_STORAGE_SCHEMA.md  LANGUAGES.md  LICENSE  Makefile  NOTICE  README.md  RESULTS.md  SECURITY.md  build-docker.sh  build.sh  deploy.sh  docker-compose.yml  go.mod  go.sum  install.sh  parsers.json  pyproject.toml  test-quickstart-output.sh  testGrep.sh
.aoa/: README.md  USAGE.md  context.jsonl  daemon.pid  domains-pending.json  status-line.txt  usage.txt
.context/: BACKLOG.md  BOARD.md  COMPLETED.md  CURRENT.md  GO-BOARD-archived-2026-02-18.md  GOALS.md  INDEX.md
.github/: PULL_REQUEST_TEMPLATE.md
_live_mockups/: arsenal.html  debrief.html  intel.html  live.html  recon.html
atlas/: ATLAS.md  embed.go
cli/: README.md  aoa  aoa.bak  build.sh
compliance/: ALIGNMENT.md  INTEGRATION-PLAN.md  README.md  REPORT.md  RUNBOOK.md
config/: domain-patterns.json  project-domains.json  semantic-patterns.json  universal-domains-v2.json  universal-domains.backup.json  universal-domains.json
docs/: board-guide.md  build.md  migration.md
grammars/: GRAMMAR_REPORT.md  README.md  manifest.json  parsers.json
hooks/: aoa-status-line.sh  aoa-usage-probe.sh  embed.go  fetch-probe.js
plugin/: USAGE.md  VALUE.md
recon/: embed.go
research/: README.md  RESEARCH_SUMMARY.txt  session-log-format.md  treesitter-ecosystem.md  treesitter-plugins.md
scripts/: build-grammars.sh  gen-manifest-hashes.go  (+3 more)
(+1391 files in other folders)
