# =============================================================================
# aOa - Project Configuration
# =============================================================================

[project]
name = "aoa"
version = "1.0.0"
description = "5 angles. 1 attack. Fast code search for Claude Code."
requires-python = ">=3.11"

# =============================================================================
# Ruff - Python Linting & Formatting
# =============================================================================
# Docs: https://docs.astral.sh/ruff/

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".context",
    "__pycache__",
    "*.egg-info",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in FastAPI)
    "B905",   # zip without strict= (Python 3.10+)
    "SIM108", # ternary operator (readability preference)
    "SIM105", # contextlib.suppress (try/except/pass is often clearer)
    "B007",   # unused loop variable (common in dict.items() unpacking)
]

[tool.ruff.lint.isort]
known-first-party = ["services", "plugin"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
